k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-api-service
spec:
  type: LoadBalancer
  selector:
    app: sample-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
